increase width on mobile

--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -49,3 +49,10 @@ main{
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
+
+@media screen and (max-width: 375px) {
+    .qr-container {
+        width: 80%
+    }
+    
+}
